tests/syntax_tests/data/parsing/errors/structure/recordFieldKeywordInExpr2.res
let r = {a: 1, type: 2}
